# ZIApolloAPISearch

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
config/: config.example.yaml
sample_data/: input.sample.csv  sf_accounts.sample.csv
scripts/: enrich_cli.py
src/enrichment/: logic.py  utils.py
src/enrichment/clients/: apollo.py  zoominfo.py
tests/: test_logic.py  test_utils.py
