[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "company-enrichment"
version = "0.1.0"
description = "CSV enrichment via ZoomInfo + Apollo with Streamlit GUI and CLI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "streamlit>=1.36.0",
    "tenacity>=8.2.3"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
